--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,12 @@
               <!-- Login form -->
               <div class="col-10">
                 <h3 class="mb-2 fed-text-color">Login</h3>
-                <form action="/" method="POST">
+                <form action="/login" method="POST">
+                  <!-- display error message here -->
+                  <% if (errMessage !== null) { %>
+                  <div class="alert bg-danger mb-2 p-1"><%= errMessage %></div>
+                  <% } %>
+                  <!-- end of error message logic -->
                   <div class="mb-2">
                     <label for="username" class="form-label">Username</label>
                     <input
@@ -72,6 +77,7 @@
                       name="password"
                     />
                   </div>
+
                   <button type="submit" class="btn btn-lg btn-outline-success">
                     Login
                   </button>
