--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -90,22 +90,22 @@
               >
             </li>
             <li class="btn btn-primary">
-              <a class="text-decoration-none text-white" href="#"
+              <a class="text-decoration-none text-white" href="/admin/register"
                 >Create User</a
               >
             </li>
             <li class="btn btn-primary">
-              <a class="text-decoration-none text-white active" href="#"
-                >Mangage User</a
+              <a class="text-decoration-none text-white active" href="/admin/add-product"
+                >Add Product</a
               >
             </li>
             <li class="btn btn-primary">
-              <a class="text-decoration-none text-white active" href="#"
-                >Mangage System</a
+              <a class="text-decoration-none text-white active" href="/admin/manage-product"
+                >Mangage Product</a
               >
             </li>
             <li class="btn btn-danger">
-              <a class="text-decoration-none text-white" href="#">Logout</a>
+              <a class="text-decoration-none text-white" href="/logout">Logout</a>
             </li>
           </ul>
         </div>
