--- a/views/user-feedback.ejs
+++ b/views/user-feedback.ejs
@@ -83,13 +83,13 @@
       <section class="text-white">
         <h3 class="mb-3 display-6 text-center">Service Feedback Form</h3>
         <form action="" class="">
-          <select class="form-select mb-3">
+          <select class="form-select mb-3" id="user-select-system">
             <option selected>Select the system you want to review</option>
             <option value="1">system 1</option>
             <option value="2">system 2</option>
             <option value="3">system 3</option>
           </select>
-          <div>
+          <div class="d-none" id="display-on-select">
             <!-- Question 1 -->
             <div class="row justify-content-around mb-3">
               <p class="col-3">
@@ -274,12 +274,15 @@
                 <label class="form-check-label" for="rad5"> Excellent </label>
               </div>
             </div>
-          </div>
-         <div class="d-flex justify-content-center">
-            <button class="btn text-center btn-lg btn-success mb-4" type="submit">
+            <div class="d-flex justify-content-center">
+              <button
+                class="btn text-center btn-lg btn-success mb-4"
+                type="submit"
+              >
                 Submit
               </button>
-         </div>
+            </div>
+          </div>
 
           <!--  -->
         </form>
@@ -296,5 +299,6 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script src="/userSelectSys.js"></script>
   </body>
 </html>
