user can submit the review

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,7 @@
                       required
                       type="password"
                       class="form-control bg-light-subtle"
-                      id="username"
+                      id="password"
                       name="password"
                     />
                   </div>
