--- a/views/user-feedback.ejs
+++ b/views/user-feedback.ejs
@@ -82,210 +82,15 @@
     <div class="container">
       <section class="text-white">
         <h3 class="mb-3 display-6 text-center">Service Feedback Form</h3>
-        <form action="" class="">
-          <select class="form-select mb-3" id="user-select-system">
-            <option selected>Select the system you want to review</option>
-            <option value="1">system 1</option>
-            <option value="2">system 2</option>
-            <option value="3">system 3</option>
-          </select>
-          <div class="d-none" id="display-on-select">
-            <!-- Question 1 -->
-            <div class="row justify-content-around mb-3">
-              <p class="col-3">
-                Does the software meet all specified requirements and use cases?
-              </p>
+        <select class="form-select mb-3" id="user-select-system">
+          <option value="placeHolder" selected>Select the system you want to review</option>
+          <% products.forEach(function(product) { %>
+          <option value="<%= product._id %>"><%= product.name %></option>
+          <% }); %>
+        </select>
+        <div id="form-place">
 
-              <!-- rad 2 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q1"
-                  id="rad2"
-                />
-                <label class="form-check-label" for="rad2"> Poor </label>
-              </div>
-              <!-- rad-3 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q1"
-                  id="rad3"
-                />
-                <label class="form-check-label" for="rad3"> Average </label>
-              </div>
-              <!-- rad-4 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q1"
-                  id="rad4"
-                />
-                <label class="form-check-label" for="rad4"> Good </label>
-              </div>
-              <!-- rad-5 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q1"
-                  id="rad5"
-                />
-                <label class="form-check-label" for="rad5"> Excellent </label>
-              </div>
-            </div>
-            <!-- question -2 -->
-            <div class="row justify-content-around mb-3">
-              <p class="col-3">Are all the features functioning as expected?</p>
-
-              <!-- rad 2 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q2"
-                  id="rad2"
-                />
-                <label class="form-check-label" for="rad2"> Poor </label>
-              </div>
-              <!-- rad-3 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q2"
-                  id="rad3"
-                />
-                <label class="form-check-label" for="rad3"> Average </label>
-              </div>
-              <!-- rad-4 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q2"
-                  id="rad4"
-                />
-                <label class="form-check-label" for="rad4"> Good </label>
-              </div>
-              <!-- rad-5 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q2"
-                  id="rad5"
-                />
-                <label class="form-check-label" for="rad5"> Excellent </label>
-              </div>
-            </div>
-            <!-- Qestion 3 -->
-            <div class="row justify-content-around mb-3">
-              <p class="col-3">Are there any missing or redundant features?</p>
-
-              <!-- rad 2 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q3"
-                  id="rad2"
-                />
-                <label class="form-check-label" for="rad2"> Poor </label>
-              </div>
-              <!-- rad-3 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q3"
-                  id="rad3"
-                />
-                <label class="form-check-label" for="rad3"> Average </label>
-              </div>
-              <!-- rad-4 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q3"
-                  id="rad4"
-                />
-                <label class="form-check-label" for="rad4"> Good </label>
-              </div>
-              <!-- rad-5 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q3"
-                  id="rad5"
-                />
-                <label class="form-check-label" for="rad5"> Excellent </label>
-              </div>
-            </div>
-            <!-- Question 4 -->
-            <div class="row justify-content-around mb-3">
-              <p class="col-3">
-                How well does the software handle edge cases or unexpected input
-              </p>
-
-              <!-- rad 2 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q4"
-                  id="rad2"
-                />
-                <label class="form-check-label" for="rad2"> Poor </label>
-              </div>
-              <!-- rad-3 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q4"
-                  id="rad3"
-                />
-                <label class="form-check-label" for="rad3"> Average </label>
-              </div>
-              <!-- rad-4 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q4"
-                  id="rad4"
-                />
-                <label class="form-check-label" for="rad4"> Good </label>
-              </div>
-              <!-- rad-5 -->
-              <div class="form-check col-1">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="q4"
-                  id="rad5"
-                />
-                <label class="form-check-label" for="rad5"> Excellent </label>
-              </div>
-            </div>
-            <div class="d-flex justify-content-center">
-              <button
-                class="btn text-center btn-lg btn-success mb-4"
-                type="submit"
-              >
-                Submit
-              </button>
-            </div>
-          </div>
-
-          <!--  -->
-        </form>
+        </div>
       </section>
     </div>
 
