--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -26,17 +26,17 @@
 
       function drawChart() {
         var data = google.visualization.arrayToDataTable([
-          ["Year", "Sales", "Expenses", "Profit"],
-          ["2014", 1000, 400, 200],
-          ["2015", 1170, 460, 250],
-          ["2016", 660, 1120, 300],
-          ["2017", 1030, 540, 350],
+          ["questions", "poor", "average", "good", "verygood"],
+          ["Qestion 1", 1000, 400, 200, 400],
+          ["Qestion 2", 1170, 460, 250, 400],
+          ["Qestion 3", 660, 1120, 300, 400],
+          ["Qestion 4", 1030, 540, 350, 400],
         ]);
 
         var options = {
           chart: {
-            title: "Company Performance",
-            subtitle: "Sales, Expenses, and Profit: 2014-2017",
+            title: "Federal Police feedback",
+            subtitle: "User Product feedback",
           },
         };
 
@@ -95,17 +95,23 @@
               >
             </li>
             <li class="btn btn-primary">
-              <a class="text-decoration-none text-white active" href="/admin/add-product"
+              <a
+                class="text-decoration-none text-white active"
+                href="/admin/add-product"
                 >Add Product</a
               >
             </li>
             <li class="btn btn-primary">
-              <a class="text-decoration-none text-white active" href="/admin/manage-product"
+              <a
+                class="text-decoration-none text-white active"
+                href="/admin/manage-product"
                 >Mangage Product</a
               >
             </li>
             <li class="btn btn-danger">
-              <a class="text-decoration-none text-white" href="/logout">Logout</a>
+              <a class="text-decoration-none text-white" href="/logout"
+                >Logout</a
+              >
             </li>
           </ul>
         </div>
