--- a/views/user-feedback.ejs
+++ b/views/user-feedback.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Federal Police Feedback System</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,16 +33,8 @@
       </div>
     </header>
     <div class="bg-dark p-3 mb-4 d-flex justify-content-end gap-3">
-      <a class="btn btn-danger" href="/logout">Logout</a>
+      <a class="btn btn-danger me-5" href="/logout">Logout</a>
       <!-- Modal -->
-      <button
-        type="button"
-        class="btn btn-warning"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Notification
-      </button>
 
       <!-- Modal -->
       <div
