--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -76,6 +76,11 @@
               >
             </li>
             <li class="btn btn-primary">
+              <a class="text-decoration-none text-white" href="/admin/list-users"
+                >List of User</a
+              >
+            </li>
+            <li class="btn btn-primary">
               <a
                 class="text-decoration-none text-white active"
                 href="/admin/add-product"
